aggiunta parte di login register e logout